--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -73,6 +73,8 @@
 
     <string name="choose_taxation_type">과세구분 선택</string>
 
+
+    <string name="choose_default_group_type">거래처구분</string>
     <string-array name="group_type">
         <item>A</item>
         <item>B</item>
