행사관리쪽 수정중

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -105,7 +105,7 @@
     </string-array>
     <string-array name="event_type">
         <item>기간행사</item>
-        <item>시간행사</item>
+        <item>연속행사</item>
     </string-array>
 
     <string name="choose_event_type">행사구분 선택</string>
